--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nagy Vendel</title>
+</head>
+<body>
+    <h1>Nagy Vendel</h1>
+    <h2>Nagy Vendel</h2>
+    <h3>Nagy Vendel</h3>
+    <h4>Nagy Vendel</h4>
+    <h5>Nagy Vendel</h5>
+    <h6>Nagy Vendel</h6>
+</body>
+</html>
