--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nagy Vendel</title>
 </head>
-<body>
+<body style="color: #e1f075; background-color: blue;">
     <h1>Nagy Vendel</h1>
     <h2>Nagy Vendel</h2>
     <h3>Nagy Vendel</h3>
