--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nagy Vendel</title>
+    <style>
+        .nev {
+            background-color: cadetblue;
+            border: 4px solid goldenrod;
+            margin: 20px;
+            padding: 20px;
+        }
+    </style>
 </head>
-<body style="color: #701100; background-image: url('kep/expl.jpg');">
+<body style=background-color:rgb(10, 116, 10)">
     <h1>Nagy Vendel</h1>
     <h2>Nagy Vendel</h2>
     <h3>Nagy Vendel</h3>
     <h4>Nagy Vendel</h4>
     <h5>Nagy Vendel</h5>
     <h6>Nagy Vendel</h6>
+    <div>
     <pre>Ez egy dzsuker zene</pre>
     <a href="https://youtu.be/wWSw0_Tvo3g?list=RDGMEMYH9CUrFO7CfLJpaD7UR85w">Check This out! </a>
+    </div>
 </body>
 </html>
