--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
     </style>
 </head>
-<body style=background-color:rgb(10, 116, 10)">
+<body style=background-color:rgb(10,116,10)">
     <h1>Nagy Vendel</h1>
     <h2>Nagy Vendel</h2>
     <h3>Nagy Vendel</h3>
