--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h4>Nagy Vendel</h4>
     <h5>Nagy Vendel</h5>
     <h6>Nagy Vendel</h6>
-    <hr style="height: 150%; color: burlywood; border: 3px; border-color: chocolate;"
+    <hr style="height: 150%; color: burlywood; border: 3px; border-color: chocolate;">
     <div class="nev">
     <pre>Ez egy dzsuker zene</pre>
     <a href="https://youtu.be/wWSw0_Tvo3g?list=RDGMEMYH9CUrFO7CfLJpaD7UR85w">Check This out! </a>
