--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body style=background-color:darkolivegreen">
     <h1>Nagy Vendel</h1>
-    <h2>Vendel</h2>
+    <h2>NagyVendel</h2>
     <h3>Nagy Vendel</h3>
     <h4>Nagy Vendel</h4>
     <h5>Nagy Vendel</h5>
     <h6>Nagy Vendel</h6>
-    <hr style="height: 150%; color: burlywood; border: 3px; border-color: chocolate;">
+    <hr style="height: 150%; color: burlywood; border: 3px; border-color: chocolate; size: 100%; width: 100%;">
     <div class="nev">
     <pre>Ez egy dzsuker zene</pre>
     <a href="https://youtu.be/wWSw0_Tvo3g?list=RDGMEMYH9CUrFO7CfLJpaD7UR85w">Check This out! </a>
