--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <pre>Ez egy dzsuker zene</pre>
         <a href="https://youtu.be/wWSw0_Tvo3g?list=RDGMEMYH9CUrFO7CfLJpaD7UR85w">Check This out! </a>
     </div>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum leo. Aliquam ornare gravida
+    <p> <a href="https://www.lipsum.com" target="_blank">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum leo. Aliquam ornare gravida
         laoreet. Praesent consectetur, sapien non posuere accumsan, orci ligula fringilla elit, in dignissim est justo
         eget metus. Vestibulum vitae eleifend diam. Suspendisse eleifend elit ut elit iaculis accumsan. Praesent
         pulvinar quam eget nibh commodo, quis condimentum nunc varius. Aliquam vitae magna lectus. Morbi nec pulvinar
@@ -63,7 +63,7 @@
         libero eu hendrerit. Etiam lobortis, ipsum non malesuada euismod, nisl quam faucibus nisl, sed lobortis ligula
         nibh at ipsum.</p>
 
-<a href="https://www.lipsum.com/feed/html">dik szoszi</a>
+
 
 </body>
 
