--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     </style>
 </head>
 
-<body style=background-color:darkolivegreen">
+<body style=background-color:darkolivegreen>
     <h1>Nagy Vendel</h1>
-    <hr style="height: 150%; color: burlywood; border: 3px; border-color: chocolate; size: 100%; width: 100%;">
     <h2>Bolondos weboldal</h2>
     <h3>Nagy Vendel</h3>
     <h4>Nagy Vendel</h4>
