--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <h4>Nagy Vendel</h4>
     <h5>Nagy Vendel</h5>
     <h6>Nagy Vendel</h6>
+
+
+<img src="kep/expl.jpg" alt="Kép">
+
+
     <div class="nev">
         <pre>Ez egy dzsuker zene</pre>
         <a href="https://youtu.be/wWSw0_Tvo3g?list=RDGMEMYH9CUrFO7CfLJpaD7UR85w">Check This out! </a>
@@ -63,7 +68,7 @@
         nibh at ipsum.</p>
 
 
-<img src="kep/expl.jpg" alt="Háttér">
+
 </body>
 
 </html>
