--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h6>Nagy Vendel</h6>
 
 
-<img src="kep/expl.jpg" alt="Kép">
+<img src="kep/expl.jpg" alt="Kép" title="EXPLO" height="100%" width="60%">
 
 
     <div class="nev">
