--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nagy Vendel</title>
-    <style>
-        .nev {
-            background-color: cadetblue;
-            border: 4px solid goldenrod;
-            margin: 20px;
-            padding: 20px;
-        }
-    </style>
 </head>
 
 <body style=background-color:darkolivegreen>
@@ -22,15 +14,14 @@
     <h4>Nagy Vendel</h4>
     <h5>Nagy Vendel</h5>
     <h6>Nagy Vendel</h6>
-
-
-<img src="kep/expl.jpg" alt="Kép" title="EXPLO" height="100%" width="60%">
+<img src="kep/" alt="Kép" title="EXPLO" height="100%" width="60%">
 
 
     <div class="nev">
         <pre>Ez egy dzsuker zene</pre>
         <a href="https://youtu.be/wWSw0_Tvo3g?list=RDGMEMYH9CUrFO7CfLJpaD7UR85w">Check This out! </a>
     </div>
+
     <p> <a href="https://www.lipsum.com" target="_blank">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum leo. Aliquam ornare gravida
         laoreet. Praesent consectetur, sapien non posuere accumsan, orci ligula fringilla elit, in dignissim est justo
         eget metus. Vestibulum vitae eleifend diam. Suspendisse eleifend elit ut elit iaculis accumsan. Praesent
@@ -41,7 +32,7 @@
         at mi feugiat, hendrerit ligula non, blandit diam.</p>
     <p> Vivamus eleifend fringilla nunc in congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed
         blandit convallis massa at elementum. Sed ut neque et nisl convallis efficitur. Curabitur risus odio, tincidunt
-        ullamcorper ornare id, pellentesque ac odio. Morbi in elementum nisi, id euismod ipsum. Proin lacinia et nunc
+        ullamcorper ornare id, pellentesque ac odio. Morbi in elsementum nisi, id euismod ipsum. Proin lacinia et nunc
         sit amet faucibus. Fusce dapibus arcu sit amet volutpat tincidunt. Lorem ipsum dolor sit amet, consectetur
         adipiscing elit. Nullam in sodales enim, ac accumsan neque. Curabitur mattis, mi a tincidunt suscipit, nunc
         lectus pretium metus, ut commodo ipsum velit sed enim. Donec non erat ac lorem pharetra accumsan eu eget metus.
@@ -61,7 +52,9 @@
     <p> Vestibulum sed felis sed ex posuere iaculis. Quisque imperdiet vel sem nec consequat. Aliquam posuere ultrices
         interdum. Phasellus libero neque, venenatis nec posuere sit amet, convallis ut felis. Nam ac felis sed magna
         vestibulum venenatis. Sed id tincidunt leo. Suspendisse quis maximus tortor. Cras id convallis erat. Maecenas in
-        fringilla lectus. Ut nec turpis augue. Aenean fermentum efficitur enim, quis placerat mauris tristique id. Donec
+        fr
+        
+        ngilla lectus. Ut nec turpis augue. Aenean fermentum efficitur enim, quis placerat mauris tristique id. Donec
         id ex vestibulum, pretium eros vel, varius velit. Nulla ornare, eros sit amet viverra malesuada, justo ligula
         dignissim ante, non tempus ante purus et arcu. Sed placerat velit sed ultrices congue. Cras tincidunt imperdiet
         libero eu hendrerit. Etiam lobortis, ipsum non malesuada euismod, nisl quam faucibus nisl, sed lobortis ligula
