--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h4>Nagy Vendel</h4>
     <h5>Nagy Vendel</h5>
     <h6>Nagy Vendel</h6>
-<img src="kep/" alt="Kép" title="EXPLO" height="100%" width="60%">
+<img src="kep/kollazs.png" alt="Kép" title="EXPLO" height="100%" width="60%">
 
 
     <div class="nev">
