--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h6>Nagy Vendel</h6>
 <img src="kep/kollazs.png" alt="Kép" title="EXPLO" width="200px">
 
+<a href="https://nagyvendel.github.io/kepxd/">Tovább</a>
+
 
     <div class="nev">
         <pre>Ez egy dzsuker zene</pre>
