--- a/keplink.html
+++ b/keplink.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Ak 47 gépkarabély</h1>
     <a href="index.html">
-        <img src="img/ak47.png" alt="ak47" title="Ak47" width="1200"height="2000" >
+        <img src="kep/ak47.png" alt="ak47" title="Ak47" width="1200"height="2000" >
     </a>
 </body>
 </html>
