--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h6>Nagy Vendel</h6>
 <img src="kep/kollazs.png" alt="Kép" title="EXPLO" width="200px">
 <br>
-<a href="https://nagyvendel.github.io/kepxd/">Tovább</a>
+<a href="keplink.html">Tovább</a>
 
 <br>
     <div class="nev">
