--- a/keplink.html
+++ b/keplink.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Ak 47 gépkarabély</h1>
-    <a href="index.html">
-        <img src="kep/ak47.png" alt="ak47" title="Ak47" width="1200"height="2000" >
-    </a>
+        <img src="kep/ak47.png" alt="ak47" title="Ak47" width="600" >
+
+        <a href="index.html">Vissza</a>
 </body>
 </html>
