--- a/keplink.html
+++ b/keplink.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Ak 47 gépkarabély</h1>
+    <a href="https://freepngimg.com/png/3845-ak-47-kalash-russian-assault-rifle-png">
         <img src="kep/ak47.png" alt="ak47" title="Ak47" width="600" >
+    </a>
 <br>
         <a href="index.html">Vissza</a>
 </body>
