--- a/orarend.html
+++ b/orarend.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <Table style="width: 70%;">
+        <caption>Órarendem</caption>
         <tr>
             <th>&nbsp;</th>
             <th>Csengetés</th>
