--- a/urlap.html
+++ b/urlap.html
@@ -14,7 +14,9 @@
             <br>
             <input type="password" id="passw">
             <label for="passw">Telefonszám</label>
-            <input type="text" id="">
+            <input type="radio" id="vissza">
+            <label for="vissza">Titkosított legyen?</label>
+            <input type="radio">
         </fieldset>
     </form>
 </body>
