--- a/urlap.html
+++ b/urlap.html
@@ -14,9 +14,16 @@
             <br>
             <input type="password" id="passw">
             <label for="passw">Telefonszám</label>
+            <br>
             <input type="radio" id="vissza">
             <label for="vissza">Titkosított legyen?</label>
+            <br>
             <input type="radio">
+            <input type="text" id="email">
+            <label for="email">Email *</label>
+            <br>
+            <input type="text" id="üzen" minlength="200%">
+            <label for="üzen">Üzenet</label>
         </fieldset>
     </form>
 </body>
