--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <button class="button button1" onclick="window.location.href='orarend.html';">Órarend</button>
         <button class="button button1" onclick="window.location.href='lista.html';">Lista</button>
         <button class="button button1" onclick="window.location.href='keplink';">Képlink</button>
+        <button class="button button1" onclick="window.location.href='urlap.html';">Űrlap</button>
     </nav>
     <section>
         <table>
