--- a/urlap.html
+++ b/urlap.html
@@ -26,5 +26,7 @@
             <label for="üzen">Üzenet</label>
         </fieldset>
     </form>
+    <br>
+    <a href="index.html">Vissza</a>
 </body>
 </html>
