--- a/urlap.html
+++ b/urlap.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Űrlap</title>
+    <style>
+        label {
+            text-align: left;
+
+        }
+    </style>
 </head>
 <body>
     <form action="">
@@ -20,10 +26,11 @@
             <br>
             <input type="radio">
             <input type="text" id="email">
-            <label for="email">Email *</label>
             <br>
+            <label for="email">Email *</label>
             <input type="text" id="üzen" minlength="200%">
             <label for="üzen">Üzenet</label>
+
         </fieldset>
     </form>
     <br>
