--- a/urlap.html
+++ b/urlap.html
@@ -15,20 +15,16 @@
     <form action="">
         <fieldset>
             <legend>Üzenet küldés</legend>
-            <input type="text" id="nev">
+            <input type="text" id="nev"><br><br>
             <label for="név">Név =</label>
-            <br>
-            <input type="password" id="passw">
+            <input type="password" id="passw"><br><br>
             <label for="passw">Telefonszám</label>
-            <br>
-            <input type="radio" id="vissza">
+            <input type="radio" id="vissza"><br><br>
             <label for="vissza">Titkosított legyen?</label>
-            <br>
-            <input type="radio">
-            <input type="text" id="email">
-            <br>
+            <input type="radio"><br><br>
+            <input type="text" id="email"><br><br>
             <label for="email">Email *</label>
-            <input type="text" id="üzen" minlength="200%">
+            <input type="text" id="üzen" minlength="200%"><br><br>
             <label for="üzen">Üzenet</label>
 
         </fieldset>
