--- a/urlap.html
+++ b/urlap.html
@@ -20,8 +20,8 @@
             <input type="password" id="passw"><br><br>
             <label for="passw">Telefonszám</label>
             <input type="radio" id="vissza"><br><br>
+            <input type="radio" id="vissza">
             <label for="vissza">Titkosított legyen?</label>
-            <input type="radio"><br><br>
             <input type="text" id="email"><br><br>
             <label for="email">Email *</label>
             <input type="text" id="üzen" minlength="200%"><br><br>
