--- a/urlap.html
+++ b/urlap.html
@@ -17,14 +17,17 @@
             <legend>Üzenet küldés</legend>
             <input type="text" id="nev"><br><br>
             <label for="név">Név =</label>
-            <input type="password" id="passw"><br><br>
+
+            <input type="password" id="passw">
             <label for="passw">Telefonszám</label>
+
             <input type="radio" id="vissza"><br><br>
-            <input type="radio" id="vissza">
+            <input type="radio" id="vissza"><br><br>
             <label for="vissza">Titkosított legyen?</label>
             <input type="text" id="email"><br><br>
             <label for="email">Email *</label>
-            <input type="text" id="üzen" minlength="200%"><br><br>
+
+            <input type="text" id="üzen"><br><br>
             <label for="üzen">Üzenet</label>
 
         </fieldset>
