--- a/urlap.html
+++ b/urlap.html
@@ -16,9 +16,9 @@
         <fieldset>
             <legend>Üzenet küldés</legend>
             <input type="text" id="nev"><br><br>
-            <label for="név">Név =</label>
+            <label for="név">Név</label>
 
-            <input type="password" id="passw">
+            <input type="password" id="passw"><br><br>
             <label for="passw">Telefonszám</label>
 
             <input type="radio" id="vissza"><br><br>
