--- a/urlap.html
+++ b/urlap.html
@@ -20,14 +20,15 @@
 
             <input type="password" id="passw"><br><br>
             <label for="passw">Telefonszám</label>
+            <br>
+            <input type="radio" id="visza"><br><br>
+            <input type="radio" id="visza"><br><br>
+            <label for="visza">Titkosított legyen?</label>
 
-            <input type="radio" id="vissza"><br><br>
-            <input type="radio" id="vissza"><br><br>
-            <label for="vissza">Titkosított legyen?</label>
             <input type="text" id="email"><br><br>
             <label for="email">Email *</label>
 
-            <input type="text" id="üzen"><br><br>
+            <input type="text" id="üzen">
             <label for="üzen">Üzenet</label>
 
         </fieldset>
