--- a/urlap.html
+++ b/urlap.html
@@ -19,7 +19,7 @@
             <input type="text" id="nev"><br><br>
 
             <label for="passw">Telefonszám</label>
-            <input type="password" id="passw"><br><br>
+            <input type="tel" id="passw"><br><br>
 
             <br>
             <label for="visza">Titkosított legyen?</label>
@@ -28,7 +28,7 @@
 
             <label for="email">Email *</label>
             <input type="text" id="email"><br><br>
-            
+
             <label for="üzen">Üzenet</label>
             <input type="text" id="üzen">
 
