--- a/urlap.html
+++ b/urlap.html
@@ -30,7 +30,7 @@
             <input type="text" id="email"><br><br>
 
             <label for="üzen">Üzenet</label>
-            <input type="text" id="üzen">
+            <input type="text" id="üzen" style="height: 200%; width: 240%; ">
 
 
         </fieldset>
