--- a/urlap.html
+++ b/urlap.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Űrlap</title>
-    <style>
-        label {
-            text-align: left;
-
-        }
-    </style>
 </head>
 <body>
     <form action="">
@@ -29,8 +23,8 @@
             <label for="email">Email *</label>
             <input type="text" id="email"><br><br>
 
-            <label for="üzen">Üzenet</label>
-            <input type="text" id="üzen" style="height: 200%; width: 240%; ">
+            <label for="uzen">Üzenet</label>
+            <textarea cols=40 rows=4 id="uzen"></textarea>
 
 
         </fieldset>
