--- a/urlap.html
+++ b/urlap.html
@@ -16,7 +16,7 @@
             <input type="tel" id="passw"><br><br>
 
             <br>
-            <label for="visza">Titkosított legyen?</label>
+            <label for="visza">Titkosított legyen?</label><br>
             <input type="radio" id="visza"><br><br>
             <input type="radio" id="visza"><br><br>
 
