--- a/urlap.html
+++ b/urlap.html
@@ -13,7 +13,7 @@
             <input type="text" id="nev"><br><br>
 
             <label for="passw">Telefonszám</label>
-            <input type="tel" id="passw"><br><br>
+            <input type="tel" id="passw" pattern="+36 [0-9]{2}[0-9] {3}[0-9]{4}"><br><br>
 
             <label for="visza">Titkosított legyen?</label><br>
             <input type="radio" id="visza"><br><br>
