--- a/urlap.html
+++ b/urlap.html
@@ -16,7 +16,7 @@
             <input type="tel" id="passw" pattern="+36 [0-9]{2}[0-9] {3}[0-9]{4}"><br><br>
 
             <label for="visza">Titkosított legyen?</label><br>
-            <input type="radio" id="visza"><br><br>
+            <input type="radio" id="visza"><br>
             <input type="radio" id="visza"><br><br>
 
             <label for="email">Email *</label>
