--- a/urlap.html
+++ b/urlap.html
@@ -25,7 +25,9 @@
             <label for="uzen">Üzenet</label>
             <textarea cols=40 rows=4 id="uzen"></textarea>
 
-
+            <input type="reset">
+            <br>
+            <input type="submit">
         </fieldset>
     </form>
     <br>
