--- a/urlap.html
+++ b/urlap.html
@@ -15,9 +15,11 @@
             <label for="passw">Telefonszám</label>
             <input type="tel" id="passw" pattern="+36 [0-9]{2}[0-9] {3}[0-9]{4}"><br><br>
 
-            <label for="visza">Titkosított legyen?</label><br>
-            <input type="radio" id="visza"><br>
-            <input type="radio" id="visza"><br><br>
+            <h3>Titkosított legyen?</h3>br>
+            <label for="férfi">Férfi</label>
+            <input type="radio" id="férfi" value="Férfi"><br>
+            <label for="nő">Nő</label>
+            <input type="radio" id="nő" value="nő"><br><br>
 
             <label for="email">Email *</label>
             <input type="text" id="email"><br><br>
