--- a/urlap.html
+++ b/urlap.html
@@ -15,7 +15,7 @@
             <label for="passw">Telefonszám</label>
             <input type="tel" id="passw" pattern="+36 [0-9]{2}[0-9] {3}[0-9]{4}"><br><br>
 
-            <h3>Titkosított legyen?</h3>br>
+            <h3>Titkosított legyen?</h3><br>
             <label for="férfi">Férfi</label>
             <input type="radio" id="férfi" value="Férfi"><br>
             <label for="nő">Nő</label>
