--- a/urlap.html
+++ b/urlap.html
@@ -13,7 +13,7 @@
             <input type="text" id="nev"><br><br>
 
             <label for="passw">Telefonszám</label>
-            <input type="tel" id="passw" pattern="+36 [0-9]{2}[0-9] {3}[0-9]{4}"><br><br>
+            <input type="tel" id="passw" pattern="+36[0-9]{2}-[0-9]{3}-[0-9]{4}"><br><br>
 
             <h3>Titkosított legyen?</h3><br>
             <label for="férfi">Férfi</label>
