--- a/urlap.html
+++ b/urlap.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Űrlap</title>
+ <style>
+    body {
+        background-image: url('Képek/blade.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+ </style>
 </head>
 <body>
-    <form action="">
-        <fieldset>
-            <legend>Üzenet küldés</legend>
-            <label for="név">Név</label>
-            <input type="text" id="nev"><br><br>
+    <form>
+        <fieldset style="width: 300px; margin: auto; vertical-align: auto; background-color: aquamarine;">
+        <div>
+            <label for="nev">Név :</label>
+            <input type="text" id="nev" required>
+        </div> 
+        <br>
 
-            <label for="passw">Telefonszám</label>
-            <input type="tel" id="passw" pattern="[0-9]{2}-[0-9]{3}-[0-9]{4}"><br><br>
-
-            <h3>Titkosított legyen?</h3><br>
-            <label for="férfi">Férfi</label>
-            <input type="radio" id="férfi" value="Férfi"><br>
-            <label for="nő">Nő</label>
-            <input type="radio" id="nő" value="nő"><br><br>
-
+        <div>
+            <label for="title"><h2>Titkosított legyen?</h2></label>
+            <br>
+            <label for="igen">Igen</label>
+            <input type="radio" id="igen" value="igen" name="title" >
+            <br>
+            <label for="nem">Nem</label>
+            <input type="radio" id="nem" value="nem" name="title">
+        </div>
+        <br>
+        <div>
             <label for="email">Email *</label>
-            <input type="text" id="email"><br><br>
-
+            <input type="text" id="email" placeholder="Dikszoszi@gmail.com" required>
+        </div>
+        <br>
+        <div>
             <label for="uzen">Üzenet</label>
-            <textarea cols=40 rows=4 id="uzen"></textarea>
-
-            <br>
-            <input type="reset">
-            <br>
-            <input type="submit">
-            <br>
+            <textarea id="uzen" cols="30" rows="10"></textarea>
+        </div>
+        <br>
+        <input type="submit">
+        <input type="reset">
         </fieldset>
     </form>
-    <br>
-    <a href="index.html">Vissza</a>
+    <a href="index.html" style="border: 4px solid wheat; border-radius: 2px; background-color: darkcyan;">Vissza</a>
 </body>
 </html>
