--- a/urlap.html
+++ b/urlap.html
@@ -6,7 +6,7 @@
     <title>Űrlap</title>
  <style>
     body {
-        background-image: url('Képek/blade.jpg');
+        background-image: url('kep/blade.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
