--- a/urlap.html
+++ b/urlap.html
@@ -21,7 +21,11 @@
             <input type="text" id="nev" required>
         </div> 
         <br>
-
+        <div>
+            <label for="tele">Telefonszám</label>
+            <input type="tel" id="tele" placeholder="+36 20 123 4567">
+        </div>
+        <br>
         <div>
             <label for="title"><h2>Titkosított legyen?</h2></label>
             <br>
