--- a/keplink.html
+++ b/keplink.html
@@ -6,6 +6,10 @@
     <title>Kép</title>
 </head>
 <body>
+    <header>
+        Nagy Vendel weboldala
+    </header>
+    <hr style="color: black; border: 5px solid; border-radius: 4px;">
     <h1>Ak 47 gépkarabély</h1>
     <a href="https://freepngimg.com/png/3845-ak-47-kalash-russian-assault-rifle-png">
         <img src="kep/ak47.png" alt="ak47" title="Ak47" width="600" >
