--- a/lista.html
+++ b/lista.html
@@ -6,6 +6,10 @@
     <title>Lista</title>
 </head>
 <body>
+    <header>
+        Nagy Vendel weboldala
+    </header>
+    <hr style="color: black; border: 5px solid; border-radius: 4px;">
     <H1>Kedvenc tantárgyaim:</H1>
     <ol>
         <li>IKT projecmunka</li>
