--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </header>
     <hr style="color: black; border: 5px solid; border-radius: 4px;">
     <nav>
+        <button class="button button1" onclick="window.location.href='index.html';">Főoldal</button>
         <button class="button button1" onclick="window.location.href='orarend.html';">Órarend</button>
         <button class="button button1" onclick="window.location.href='lista.html';">Lista</button>
         <button class="button button1" onclick="window.location.href='keplink';">Képlink</button>
