--- a/index.html
+++ b/index.html
@@ -4,40 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NagyVeendel</title>
-    <style>
-        .button {
-            cursor: pointer;
-            text-align: center;
-            color: bisque;
-            font: bold  ;
-            font-size: larger;
-            border-radius: 10px;
-            transition-duration: 0.5s;
-            padding: 10px;
-            width: 200px;
-
-        }
-
-        .button1 {
-            background-color: coral;
-            color: black;
-            border: 4px black;
-        }
-        .button1:hover {
-            background-color: #4CAF50;
-            color: white;
-        }
-        header {
-            text-align: center;
-            padding: 20px;
-            font: bold;
-            font-size: xx-large;
-            font-family: 'Times New Roman', Times, serif;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header1">
         Nagy Vendel weboldala
     </header>
     <hr style="color: black; border: 5px solid; border-radius: 4px;">
