--- a/lista.html
+++ b/lista.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header1">
         Nagy Vendel weboldala
     </header>
     <hr style="color: black; border: 5px solid; border-radius: 4px;">
+    <nav>
+        <button class="button button1" onclick="window.location.href='index.html';">Főoldal</button>
+        <button class="button button1" onclick="window.location.href='orarend.html';">Órarend</button>
+        <button class="button button1" onclick="window.location.href='lista.html';">Lista</button>
+        <button class="button button1" onclick="window.location.href='keplink';">Képlink</button>
+        <button class="button button1" onclick="window.location.href='urlap.html';">Űrlap</button>
+    </nav>
     <H1>Kedvenc tantárgyaim:</H1>
     <ol>
         <li>IKT projecmunka</li>
