--- a/orarend.html
+++ b/orarend.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Órarend</title>
+    <link rel="stylesheet" href="style.css">
 <style>
     table, th, tr, td {
         border-collapse: collapse;
@@ -20,6 +21,17 @@
 </style>
 </head>
 <body>
+    <header class="header1">
+        Nagy Vendel weboldala
+    </header>
+    <hr style="color: black; border: 5px solid; border-radius: 4px;">
+    <nav>
+        <button class="button button1" onclick="window.location.href='index.html';">Főoldal</button>
+        <button class="button button1" onclick="window.location.href='orarend.html';">Órarend</button>
+        <button class="button button1" onclick="window.location.href='lista.html';">Lista</button>
+        <button class="button button1" onclick="window.location.href='keplink';">Képlink</button>
+        <button class="button button1" onclick="window.location.href='urlap.html';">Űrlap</button>
+    </nav>
     <Table style="width: 70%;">
         <caption>Órarendem</caption>
         <tr>
