--- a/urlap.html
+++ b/urlap.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Űrlap</title>
+    <link rel="stylesheet" href="style.css">
  <style>
     body {
         background-image: url('kep/blade.jpg');
@@ -14,6 +15,17 @@
  </style>
 </head>
 <body>
+    <header class="header1">
+        Nagy Vendel weboldala
+    </header>
+    <hr style="color: black; border: 5px solid; border-radius: 4px;">
+    <nav>
+        <button class="button button1" onclick="window.location.href='index.html';">Főoldal</button>
+        <button class="button button1" onclick="window.location.href='orarend.html';">Órarend</button>
+        <button class="button button1" onclick="window.location.href='lista.html';">Lista</button>
+        <button class="button button1" onclick="window.location.href='keplink';">Képlink</button>
+        <button class="button button1" onclick="window.location.href='urlap.html';">Űrlap</button>
+    </nav>
     <form>
         <fieldset style="width: 300px; margin: auto; vertical-align: auto; background-color: aquamarine;">
         <div>
