--- a/keplink.html
+++ b/keplink.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kép</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header class="header1">
-        Nagy Vendel weboldala
+<body class="bodymain">
+    <header class="header">
+        <H1>Nagy Veendel oldala</H1>
+        <p class="p1">:D</p>
+        <hr class="hrmain">
     </header>
-    <hr style="color: black; border: 5px solid; border-radius: 4px;">
-    <nav>
-        <button class="button button1" onclick="window.location.href='index.html';">Főoldal</button>
-        <button class="button button1" onclick="window.location.href='orarend.html';">Órarend</button>
-        <button class="button button1" onclick="window.location.href='lista.html';">Lista</button>
-        <button class="button button1" onclick="window.location.href='keplink';">Képlink</button>
-        <button class="button button1" onclick="window.location.href='urlap.html';">Űrlap</button>
+    <br>
+    <nav class="navmain1">
+        <div class="div1">
+            <button class="activeindex buttonmain1" onclick="window.location.href='index.html';">Főoldal</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='orarend.html';">Órarend</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
+        </div>
     </nav>
-    <h1>Ak 47 gépkarabély</h1>
-    <a href="https://freepngimg.com/png/3845-ak-47-kalash-russian-assault-rifle-png">
-        <img src="kep/ak47.png" alt="ak47" title="Ak47" width="600" >
-    </a>
-<br>
-        <a href="index.html">Vissza</a>
+    <div class="divak">
+        <h1>Ak 47 gépkarabély</h1>
+        <a href="https://freepngimg.com/png/3845-ak-47-kalash-russian-assault-rifle-png">
+            <img src="kep/ak47.png" alt="ak47" title="Ak47" width="600" >
+        </a>
+    </div>
 </body>
 </html>
