--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 nibh at ipsum.</p>
             </td>
             <td class="tdsemmi">&nbsp;</td>
-            <td class="tdkollazs">
+            <td class="kollazscucc">
                 <h1>Nagy Vendel</h1>
                 <h2>Nagy Vendel</h2>
                 <h3>Nagy Vendel</h3>
