--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
         </div>
     </nav>
-    <table>
+    <table class="tableindex">
         <tr>
             <td class="tdszoveg">
                 <a href="https://www.lipsum.com" target="_blank">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum leo. Aliquam ornare gravida
