--- a/orarend.html
+++ b/orarend.html
@@ -19,19 +19,21 @@
 
     }
 </style>
-</head>
-<body>
-    <header class="header1">
-        Nagy Vendel weboldala
+<body class="bodymain">
+    <header class="header">
+        <H1>Nagy Veendel oldala</H1>
+        <p class="p1">:D</p>
+        <hr class="hrmain">
     </header>
-    <hr style="color: black; border: 5px solid; border-radius: 4px;">
-    <nav>
-        <button class="button button1" onclick="window.location.href='index.html';">Főoldal</button>
-        <button class="button button1" onclick="window.location.href='orarend.html';">Órarend</button>
-        <button class="button button1" onclick="window.location.href='lista.html';">Lista</button>
-        <button class="button button1" onclick="window.location.href='keplink';">Képlink</button>
-        <button class="button button1" onclick="window.location.href='urlap.html';">Űrlap</button>
-    </nav>
+    <br>
+    <nav class="navmain1">
+        <div class="div1">
+            <button class="activeindex buttonmain1" onclick="window.location.href='index.html';">Főoldal</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='orarend.html';">Órarend</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
+        </div>
     <Table style="width: 70%;">
         <caption>Órarendem</caption>
         <tr>
