--- a/urlap.html
+++ b/urlap.html
@@ -5,16 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Űrlap</title>
     <link rel="stylesheet" href="style.css">
- <style>
-    body {
-        background-image: url('kep/blade.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-    }
- </style>
 </head>
-<body class="bodymain">
+<body class="urlapbody">
     <header class="header">
         <H1>Nagy Veendel oldala</H1>
         <p class="p1">:D</p>
