--- a/urlap.html
+++ b/urlap.html
@@ -6,7 +6,7 @@
     <title>Űrlap</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="urlapbody">
+<body class="bodymain">
     <header class="header">
         <H1>Nagy Veendel oldala</H1>
         <p class="p1">:D</p>
