--- a/lista.html
+++ b/lista.html
@@ -15,9 +15,9 @@
     <br>
     <nav class="navmain1">
         <div class="div1">
-            <button class="activeindex buttonmain1" onclick="window.location.href='index.html';">Főoldal</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='index.html';">Főoldal</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='orarend.html';">Órarend</button>
-            <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
+            <button class="activeindex buttonmain1" onclick="window.location.href='lista.html';">Lista</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
         </div>
