--- a/orarend.html
+++ b/orarend.html
@@ -34,7 +34,7 @@
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
         </div>
-    <Table style="width: 70%;">
+    <Table style="width: 70%;" class="tableora">
         <caption>Órarendem</caption>
         <tr>
             <th>&nbsp;</th>
