--- a/orarend.html
+++ b/orarend.html
@@ -11,12 +11,9 @@
         border-color: black;
         border: 5px solid;
         text-align: center;
-
-    }
-
-    td {
-        text-align: center;
-
+        background: linear-gradient(#edfffb, #e6e6e6);
+        font-family: fantasy;
+        color: #253663;
     }
 </style>
 <body class="bodymain">
