--- a/index.html
+++ b/index.html
@@ -75,5 +75,9 @@
             </td>
         </tr>
     </table>
+    <footer class="footer1">
+        <p>nagyv1@kkszki.hu</p>
+        <p></p>
+    </footer>
 </body>
 </html>
