--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </table>
     <footer class="footer1">
         <p>nagyv1@kkszki.hu</p>
-        <p></p>
+        <p>Veendel</p>
     </footer>
 </body>
 </html>
