--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
             </td>
         </tr>
     </table>
+    <br>
     <footer class="footer1">
         <p>nagyv1@kkszki.hu</p>
         <p>Veendel</p>
+        <p>Hit_many</p>
     </footer>
 </body>
 </html>
