--- a/keplink.html
+++ b/keplink.html
@@ -28,5 +28,11 @@
             <img src="kep/ak47.png" alt="ak47" title="Ak47" width="600" >
         </a>
     </div>
+    <br>
+    <footer class="footer1">
+        <p>nagyv1@kkszki.hu</p>
+        <p>Veendel</p>
+        <p>Hit_many</p>
+    </footer>
 </body>
 </html>
