--- a/lista.html
+++ b/lista.html
@@ -34,5 +34,11 @@
         <li>Downhill</li>
     </ul>
     <a href="index.html">Vissza</a>
+    <br>
+    <footer class="footer1">
+        <p>nagyv1@kkszki.hu</p>
+        <p>Veendel</p>
+        <p>Hit_many</p>
+    </footer>
 </body>
 </html>
