--- a/orarend.html
+++ b/orarend.html
@@ -106,5 +106,11 @@
             <td>IKT</td>
         </tr>
     </Table>
+    <br>
+    <footer class="footer1">
+        <p>nagyv1@kkszki.hu</p>
+        <p>Veendel</p>
+        <p>Hit_many</p>
+    </footer>
 </body>
 </html>
