--- a/urlap.html
+++ b/urlap.html
@@ -59,5 +59,11 @@
         </fieldset>
     </form>
     <a href="index.html" style="border: 4px solid wheat; border-radius: 2px; background-color: darkcyan;">Vissza</a>
+    <br>
+    <footer class="footer1">
+        <p>nagyv1@kkszki.hu</p>
+        <p>Veendel</p>
+        <p>Hit_many</p>
+    </footer>
 </body>
 </html>
