--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NagyVeendel</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/kep/images.png">
+    <link rel="shortcut icon" href="kep/images.png">
 </head>
 <body class="bodymain">
     <header class="header">
