--- a/keplink.html
+++ b/keplink.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kép</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="kep/images.png">
 </head>
 <body class="bodymain">
     <header class="header">
