--- a/orarend.html
+++ b/orarend.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Órarend</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="kep/images.png">
 <style>
     table, th, tr, td {
         border-collapse: collapse;
