--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>NagyVeendel</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="kep/images.png">
+    <link rel="icon" type="image/x-icon" href="/kep/kollazs.png">
 </head>
 <body class="bodymain">
     <header class="header">
