--- a/orarend.html
+++ b/orarend.html
@@ -31,6 +31,7 @@
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     <Table style="width: 70%;" class="tableora">
         <caption>Órarendem</caption>
