--- a/evszakok.html
+++ b/evszakok.html
@@ -18,9 +18,10 @@
         <div class="div1">
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='index.html';">Főoldal</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='orarend.html';">Órarend</button>
-            <button class="activeindex buttonmain1" onclick="window.location.href='lista.html';">Lista</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
+            <button class="activeindex buttonmain1" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     </nav>
 </body>
