--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     </nav>
     <table class="tableindex">
