--- a/keplink.html
+++ b/keplink.html
@@ -21,6 +21,7 @@
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
             <button class="activeindex buttonmain1" onclick="window.location.href='keplink';">Képlink</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     </nav>
     <div class="divak">
