--- a/evszakok.html
+++ b/evszakok.html
@@ -24,5 +24,22 @@
             <button class="activeindex buttonmain1" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     </nav>
+    <div>
+        <img src="/kep/tavasz.jpg" alt="">
+    </div>
+    <div>
+        <img src="/kep/nyar.jpg" alt="">
+    </div>
+    <div>
+        <img src="/kep/osz.jpg" alt="">
+    </div>
+    <div>
+        <img src="/kep/tel.jpg" alt="">
+    </div>
+    <footer class="footer1">
+        <p>nagyv1@kkszki.hu</p>
+        <p>Veendel</p>
+        <p>Hit_many</p>
+    </footer>
 </body>
 </html>
