--- a/evszakok.html
+++ b/evszakok.html
@@ -25,16 +25,16 @@
         </div>
     </nav>
     <div>
-        <img src="/kep/tavasz.jpg" alt="Tavasz" title="Tavasz">
+        <img src="/ep/tavasz.jpg" alt="Tavasz" title="Tavasz">
     </div>
     <div>
-        <img src="/kep/nyar.jpg" alt="Nyár" title="Nyár">
+        <img src="kep/nyar.jpg" alt="Nyár" title="Nyár">
     </div>
     <div>
-        <img src="/kep/osz.jpg" alt="Ősz" title="Ősz">
+        <img src="kep/osz.jpg" alt="Ősz" title="Ősz">
     </div>
     <div>
-        <img src="/kep/tel.jpg" alt="Tél" title="Tél">
+        <img src="kep/tel.jpg" alt="Tél" title="Tél">
     </div>
     <footer class="footer1">
         <p>nagyv1@kkszki.hu</p>
