--- a/evszakok.html
+++ b/evszakok.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <div>
-        <img src="/ep/tavasz.jpg" alt="Tavasz" title="Tavasz" class="evszakkepek">
+        <img src="kep/tavasz.jpg" alt="Tavasz" title="Tavasz" class="evszakkepek">
     </div>
     <div>
         <img src="kep/nyar.jpg" alt="Nyár" title="Nyár" class="evszakkepek">
