--- a/evszakok.html
+++ b/evszakok.html
@@ -24,16 +24,16 @@
             <button class="activeindex buttonmain1" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     </nav>
-    <div>
+    <div class="evszakkepek">
         <img src="kep/tavasz.jpg" alt="Tavasz" title="Tavasz" class="evszakkep">
     </div>
-    <div>
+    <div class="evszakkepek">
         <img src="kep/nyar.jpg" alt="Nyár" title="Nyár" class="evszakkep">
     </div>
-    <div>
+    <div class="evszakkepek">
         <img src="kep/osz.jpg" alt="Ősz" title="Ősz" class="evszakkep">
     </div>
-    <div>
+    <div class="evszakkepek">
         <img src="kep/tel.jpg" alt="Tél" title="Tél" class="evszakkep">
     </div>
     <footer class="footer1">
