--- a/evszakok.html
+++ b/evszakok.html
@@ -24,17 +24,17 @@
             <button class="activeindex buttonmain1" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     </nav>
-    <div class="evszakkepek">
-        <img src="kep/tavasz.jpg" alt="Tavasz" title="Tavasz" class="evszakkep">
+    <div class="div3">
+        <img src="kep/tavasz.jpg" alt="Tavasz" title="Tavasz" class="evszakkepek">
     </div>
     <div class="evszakkepek">
-        <img src="kep/nyar.jpg" alt="Nyár" title="Nyár" class="evszakkep">
+        <img src="kep/nyar.jpg" alt="Nyár" title="Nyár" class="evszakkepek">
     </div>
     <div class="evszakkepek">
-        <img src="kep/osz.jpg" alt="Ősz" title="Ősz" class="evszakkep">
+        <img src="kep/osz.jpg" alt="Ősz" title="Ősz" class="evszakkepek">
     </div>
     <div class="evszakkepek">
-        <img src="kep/tel.jpg" alt="Tél" title="Tél" class="evszakkep">
+        <img src="kep/tel.jpg" alt="Tél" title="Tél" class="evszakkepek">
     </div>
     <footer class="footer1">
         <p>nagyv1@kkszki.hu</p>
