--- a/evszakok.html
+++ b/evszakok.html
@@ -25,16 +25,16 @@
         </div>
     </nav>
     <div class="div3">
-        <img src="kep/tavasz.jpg" alt="Tavasz" title="Tavasz" class="evszakkepek">
+        <img src="kep/tavasz.jpg" class="evszakkepek">
     </div>
     <div class="evszakkepek">
-        <img src="kep/nyar.jpg" alt="Nyár" title="Nyár" class="evszakkepek">
+        <img src="kep/nyar.jpg" class="evszakkepek">
     </div>
     <div class="evszakkepek">
-        <img src="kep/osz.jpg" alt="Ősz" title="Ősz" class="evszakkepek">
+        <img src="kep/osz.jpg"class="evszakkepek">
     </div>
     <div class="evszakkepek">
-        <img src="kep/tel.jpg" alt="Tél" title="Tél" class="evszakkepek">
+        <img src="kep/tel.jpg" class="evszakkepek">
     </div>
     <footer class="footer1">
         <p>nagyv1@kkszki.hu</p>
