--- a/evszakok.html
+++ b/evszakok.html
@@ -27,13 +27,13 @@
     <div class="div3">
         <img src="kep/tavasz.jpg" class="evszakkepek">
     </div>
-    <div class="evszakkepek">
+    <div class="div3">
         <img src="kep/nyar.jpg" class="evszakkepek">
     </div>
-    <div class="evszakkepek">
+    <div class="div3">
         <img src="kep/osz.jpg"class="evszakkepek">
     </div>
-    <div class="evszakkepek">
+    <div class="div3">
         <img src="kep/tel.jpg" class="evszakkepek">
     </div>
     <footer class="footer1">
