--- a/evszakok.html
+++ b/evszakok.html
@@ -24,17 +24,21 @@
             <button class="activeindex buttonmain1" onclick="window.location.href='evszakok.html';">Évszakok</button>
         </div>
     </nav>
-    <div class="div3">
+    <div id="div3">
         <img src="kep/tavasz.jpg" class="evszakkepek">
+        <p class="evszakP">Tavasz</p>
     </div>
-    <div class="div3">
+    <div id="div3">
         <img src="kep/nyar.jpg" class="evszakkepek">
+        <p class="evszakP">Nyár</p>
     </div>
-    <div class="div3">
+    <div id="div3">
         <img src="kep/osz.jpg"class="evszakkepek">
+        <p class="evszakP">Ősz</p>
     </div>
-    <div class="div3">
+    <div id="div3">
         <img src="kep/tel.jpg" class="evszakkepek">
+        <p class="evszakP">Tél</p>
     </div>
     <footer class="footer1">
         <p>nagyv1@kkszki.hu</p>
