--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <button class="activeindex buttonmain1" onclick="window.location.href='index.html';">Főoldal</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='orarend.html';">Órarend</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='lista.html';">Lista</button>
-            <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink';">Képlink</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='keplink.html';">Képlink</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='evszakok.html';">Évszakok</button>
+            <button class="buttonmain1 buttonmain2" onclick="window.location.href='kep.html';">Képcserélő</button>
         </div>
     </nav>
     <table class="tableindex">
