--- a/lista.html
+++ b/lista.html
@@ -23,6 +23,8 @@
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='evszakok.html';">Évszakok</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='kep.html';">Képcserélő</button>
+            <button class="activeindex buttonmain2" onclick="window.location.href='etterem.html';">Képcserélő</button>
+
         </div>
     <H1>Kedvenc tantárgyaim:</H1>
     <ol>
