--- a/etterem.html
+++ b/etterem.html
@@ -25,7 +25,7 @@
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='urlap.html';">Űrlap</button>
             <button class="buttonmain2 buttonmain1" onclick="window.location.href='evszakok.html';">Évszakok</button>
             <button class="buttonmain1 buttonmain2" onclick="window.location.href='kep.html';">Képcserélő</button>
-            <button class="activeindex buttonmain2" onclick="window.location.href='etterem.html';">Képcserélő</button>
+            <button class="activeindex buttonmain2" onclick="window.location.href='etterem.html';">Étterem</button>
         </div>
     </nav>
 
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card shakerasb">
                         <div class="card-body">
                             <h5 class="card-title">Málnás Shake</h5>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card shakeblue">
                         <div class="card-body">
                             <h5 class="card-title">Áfonyás Shake</h5>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-6 mb-4">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card shakepome">
                         <div class="card-body">
                             <h5 class="card-title">Gránátalmás Shake</h5>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-6 mb-4">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card shakestraw">
                         <div class="card-body">
                             <h5 class="card-title">Epres Shake</h5>
